agregar foto de perfil

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -21,7 +21,7 @@ import Projects from "../components/Projects.astro";
     <SectionContainer class="py-44 pb-32">
       <img
         class="rounded-full size-12 mb-4"
-        src="https://avatars.githubusercontent.com/u/145734904?v=4"
+        src="/public/img/felipedev.jpg"
         alt="felipe photo"
       />
       <h1
